ecmascript/parser/tests/test262-error-references/fail/f6924dd818b18733.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/f6924dd818b18733.js:1:15
  |
1 | 'use strict'; 01
  |               ^^

